--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
+  <form class="search-form" id="search-form">
+    <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+    <button type="submit">Search</button>
+  </form>
+  <div class="container">
+    <div class="gallery">
 
+    </div>
+    <button type="button" class="button-up button-up-hidden">
+      <img src="./img/arrow-up.svg" alt="arrow-up" width="20" height="20">
+    </button>
+    <!-- <button type="button" class="load-more is-hidden">Load more</button> -->
+  </div>
   <script type="module" src="./main.js"></script>
 </body>
 
