--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
     <button type="submit">Search</button>
   </form>
+  <span class="loader is-hidden"></span>
   <div class="container">
     <div class="gallery">
     </div>
